fix: :bug: Fixed overflow on projects section

--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -82,7 +82,7 @@ a#noDecoration {
 }
 
 .hide-scroll {
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .hs {
